# job-agent-dev

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/ISSUE_TEMPLATE/: new-profile.md  rebuild-profile.md
.github/workflows/: build-profile.yml  deploy.yml  refresh.yml  search.yml  tests.yml
docs/: app.js  index.html  manifest.json  offers.json  profiles.json  style.css  tracking.json
docs/6b6b7740ef/: offers.json
docs/demo/: offers.json
docs/js/: config.js  constants.js  github-api.js  onboarding.js
profiles/6b6b7740ef/: meta.json  profile.md  scoring.config.json  search.config.json
profiles/demo/: meta.json  profile.md  scoring.config.json  search.config.json
scripts/: apply_profile_config.py  build_offers.py  delete_profile.sh  setup_demo.py
src/: cli.py  dedup.py  env.py  exporter.py  france_travail.py  la_bonne_alternance.py  logger.py  models.py  rerank.py  scoring.py  semantic.py
tests/: conftest.py  test_apply_profile_config.py  test_dedup.py  test_exporter.py  test_france_travail.py  test_la_bonne_alternance.py  test_rerank.py  test_scoring.py  test_semantic.py
tests/fixtures/: france_travail_search.json  lba_search.json
