[project]
name = "job-agent"
version = "0.1.0"
description = "Un agent pour rechercher des offres d'emploi"
requires-python = ">=3.11,<3.13"

dependencies = [
    "typer",
    "pydantic",
    "rich",
    "httpx",
    "jinja2",
    "requests",
    "beautifulsoup4",
    "pandas",
    "sentence-transformers",
    "anthropic",
]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-watch",
    "ruff",
    "mypy",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["src/__init__.py", "src/cli.py", "src/logger.py", "src/main.py"]

[tool.coverage.report]
show_missing = true
